--- a/views/include/lists.ejs
+++ b/views/include/lists.ejs
@@ -1,95 +1,16 @@
-<% orders.forEach((data)=> { %>
-    <div class="col-6">
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-warning w-100 mx-0" data-bs-toggle="modal"
-            data-bs-target="#exampleModal<%= data._id %>">
-            Añadir a <%= data.name %>
-        </button>
-        <% if( products.status=='No Stock' ){ %>
-            <div class="modal fade" id="exampleModal<%= data._id %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= data._id %>"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">
-                                <%= products.product %>
-                            </h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p class="fs-4">Producto Fuera de Stock !</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <% } else { %>
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal<%= data._id %>" tabindex="-1"
-                    aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <form id="enviar-orden">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">
-                                        <%= products.product %>
-                                    </h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-
-                                <div class="modal-body">
-                                    <div class="row my-2 mx-2 d-flex align-items-center">
-                                        <div class="col-3">
-                                            <label for="inputNumber01">Cantidad: </label>
-                                            <input type="number" class="form-control pt-2" id="amount" min="1"
-                                                name="amount" max="<%= products.stock %>" required>
-                                        </div>
-                                        <div class="col-9">
-                                            <label for="imagen" class="form-label">Imagenes:
-                                            </label>
-                                            <input class="form-control" type="file" id="image" multiple name="image" required>
-                                        </div>
-                                    </div>
-                                    <div class="row my-3 mx-2 d-flex align-items-center">
-                                        <div class="col-3 d-flex flex-row align-items-center justify-content-between">
-                                            <label for="color" class="form-label">Color
-                                            </label>
-                                            <input type="color" class="form-control form-control-color" id="color"
-                                                value="#563d7c" title="Choose your color" name="color" required>
-                                        </div>
-                                        <div class="col-9 d-flex flex-row align-items-center justify-content-between">
-                                            <label for="sizes" class="form-label mx-2">Tallas
-                                            </label>
-                                            <select class="form-select" id="size" aria-label="Default select example"
-                                                name="size" required>
-                                                <option selected>Seleccione una talla</option>
-                                                <option value="S">S</option>
-                                                <option value="M">M</option>
-                                                <option value="L">L</option>
-                                                <option value="XL">XL</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="modal-footer">
-                                    <input type="number" name="stock" id="stock" value="<%= products.stock %>" hidden>
-                                    <input type="text" name="id" id="id" value="<%= products._id %>" hidden>
-                                    <input type="text" name="price" id="price" value="<%= products.price %>" hidden>
-                                    <input type="text" name="product" id="product" value="<%= products.product %>" hidden>
-                                    <input type="text" name="order" id="order" value="<%= data._id %>" hidden>
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-success">Enviar</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <% } %>
+<% if( products.status=='No Stock' ){ %>
+    <p class="fs-4">Producto Fuera de Stock !</p>
+<% } else { %>
+    <div class="d-flex flex-row justify-content-bewtween"></div>
+        <% orders.forEach((data)=> { %>
+            <% if( data.status == 'en proceso' ){ %>
+                <button type="button" class="btn btn-warning w-50 mx-3" onclick="addOrder('<%= products.stock %>', '<%= products._id %>', '<%= products.price %>', '<%= products.product %>', '<%= data._id %>')">
+                    Añadir a <%= data.name %>
+                </button>
+            <% } %>
+        <% }) %>
     </div>
-    <% }) %>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="/details.js" ></script>
+<% } %>
+
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>    
+<script src="/details.js" ></script>
