--- a/views/account.ejs
+++ b/views/account.ejs
@@ -6,62 +6,59 @@
                 <div class="row py-2">
                     <div class="col-4">
                         <label for="name" class="form-label ">Nombres</label>
-                        <input type="text" class="form-control " id="name"
-                            placeholder="" required name="name">
+                        <input type="text" class="form-control " id="name" placeholder="" required name="name">
                     </div>
                     <div class="col-4">
                         <label for="lastname" class="form-label ">Apellidos</label>
-                        <input type="text" class="form-control " id="lastname"
-                            placeholder="" required name="lastname">
+                        <input type="text" class="form-control " id="lastname" placeholder="" required name="lastname">
                     </div>
                     <div class="col-4">
-                        <label for="user-login" class="form-label">Usuario: </label>
-                        <input type="text" id="user-login" class="form-control" required>
                         <label for="username-account" class="form-label ">Usuario</label>
-                        <input type="text" class="form-control " id="username-account"
-                            placeholder="" required name="user">
+                        <input type="text" class="form-control " id="username-account" placeholder="" required
+                            name="user">
                     </div>
                 </div>
                 <div class="row py-2">
                     <div class="col-4">
                         <label for="mail" class="form-label">Correo</label>
-                        <input type="email" class="form-control " id="mail"
-                            placeholder="" required name="email">
+                        <input type="email" class="form-control " id="mail" placeholder="" required name="email">
                     </div>
                     <div class="col-4">
                         <label for="documento" class="form-label">Documento</label>
-                        <input type="text" class="form-control " id="documento"
-                            placeholder="" required name="document">
+                        <input type="text" class="form-control " id="documento" placeholder="" required name="document">
                     </div>
                     <div class="col-4">
-                        <label for="password-login" class="form-label">Clave</label>
-                        <input type="password" class="form-control " id="password-login"
-                            placeholder="" required name="password-login">
                         <label for="password-account" class="form-label">Clave</label>
-                        <input type="password" class="form-control " id="password-account"
-                            placeholder="" required name="password">
+                        <input type="password" class="form-control " id="password-account" placeholder="" required
+                            name="password">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <label for="password-account-confirm" class="form-label">Clave</label>
+                        <input type="password" class="form-control " id="password-account-confirm" placeholder=""
+                            required name="password-login">
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row py-3">
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                    <label class="form-check-label" for="invalidCheck">
-                        Acepto los términos y condiciones
-                    </label>
-                    <div class="invalid-feedback">
-                        Debe de estar de acuerdo antes de enviar
+            <div class="row py-3">
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            Acepto los términos y condiciones
+                        </label>
+                        <div class="invalid-feedback">
+                            Debe de estar de acuerdo antes de enviar
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row my-3">
-            <div class="col-2">
-                <button class="btn btn-primary" type="submit">Aceptar</button>
+            <div class="row my-3">
+                <div class="col-2">
+                    <button class="btn btn-primary" type="submit">Aceptar</button>
+                </div>
             </div>
-        </div>
     </form>
 </div>
 
